# graphql

./: Cargo.toml
migration/: initial.sql
src/: database.rs  main.rs  schema.rs
